--- a/sass/components/_hero-restaurant.scss
+++ b/sass/components/_hero-restaurant.scss
@@ -1,6 +1,6 @@
 .hero__restaurant {
     background-image: linear-gradient(to bottom, $heroBgColor, $heroBgColor), 
-    url(../images/03.jpg);
+    url(./images/03.jpg);
     background-color: $heroBgColor;
     background-repeat: no-repeat;
     background-size: cover;
@@ -12,26 +12,26 @@
 
     @include retina {
         background-image: linear-gradient(to bottom, $heroBgColor, $heroBgColor), 
-        url(../images/03.jpg); 
+        url(./images/03.jpg); 
     }
     @include tablet {
         height: 720px;
         background-image: linear-gradient(to bottom, $heroBgColor, $heroBgColor),
-        url(../images/03.jpg);
+        url(./images/03.jpg);
         
         @include retina {
             background-image: linear-gradient(to bottom, $heroBgColor, $heroBgColor),
-            url(../images/03.jpg);
+            url(./images/03.jpg);
         }  
     }
 
 @include desktop {
     background-image: linear-gradient(to bottom, $heroBgColor, $heroBgColor),
-    url(../images/03.jpg);
+    url(./images/03.jpg);
 
     @include retina { 
         background-image: linear-gradient(to bottom, $heroBgColor, $heroBgColor),
-        url(../images/03.jpg);
+        url(./images/03.jpg);
     }
     max-width: 1920px;
     }
