--- a/sass/components/_module.scss
+++ b/sass/components/_module.scss
@@ -12,3 +12,6 @@
 @import './modal-window';
 @import './portfolio-btn-set';
 @import './portfolio-cards';
+
+@import './header';
+@import './footer';
