--- a/sass/util/_variables.scss
+++ b/sass/util/_variables.scss
@@ -12,3 +12,34 @@ $buttonSetShadow: 0px 10px 15px 5px rgba(114, 64, 96, 0.2);
 $colorGradient: rgba(47, 48, 58, 0.4);
 $duration: 250ms;
 $timingFunction: cubic-bezier(0.4, 0, 0.2, 1);
+$accentColor: #f3c653;
+$secondaryAccentColor: #c79002;
+$mainDarkColor: #000000;
+$mainLightColor: #ffffff;
+$addressColor: #e5e5e5;
+$pretitleColor: #b4b4b4;
+$primaryTitleColor: #828282;
+$secondaryTitleColor: #494848;
+$primaryTextColor: #5f5f5f;
+$secondaryTextColor: #7a7a7a;
+$heroTextColor: #bababa;
+$accentBorderColor: rgba(243, 198, 83, 0.7);
+$mainBorderColor: rgba(186, 186, 186, 0.4);
+
+$primaryBgColor: #fffdee;
+$secondaryBgColor: #f0ecd6;
+$footerBgColor: #0e0c07;
+$buttonBgColor: rgba(0, 0, 0, 0.4);
+$heroBgColor: rgba(0, 0, 0, 0.65);
+$detailsHotelBgColor: rgba(0, 0, 0, 0.7);
+
+$primaryShadowColor: rgba(0, 0, 0, 0.25);
+
+$modalPlaceholderColor: #808080;
+$modalShadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+$modalBgColor: rgba(0, 0, 0, 0.2);
+
+$duration: 250ms;
+$timingFunction: cubic-bezier(0.4, 0, 0.2, 1);
