--- a/sass/components/_aboutus.scss
+++ b/sass/components/_aboutus.scss
@@ -1,7 +1,7 @@
 .advantages {
     text-align: center;
     // padding: 60px 0 60px;
-    background-color: $primaryBgColor;
+    background-color: $mainLightColor;
     position: relative;
     margin: 0 auto;
     padding: 0;
@@ -61,7 +61,7 @@
     display: inline-block;
     width: 50px;
     height: 50px;
-    background-image: url(../images/weight.png);
+    background-image: url(../../images/weight.png);
     background-repeat: no-repeat;
     background-size: contain;
     margin-bottom: 16px;
@@ -80,7 +80,7 @@
     display: inline-block;
     width: 50px;
     height: 50px;
-    background-image: url(../images/weight.png);
+    background-image: url(../../images/weight.png);
     background-repeat: no-repeat;
     background-size: contain;
     margin-bottom: 16px;
@@ -99,7 +99,7 @@
     display: inline-block;
     width: 50px;
     height: 50px;
-    background-image: url(../images/weight.png);
+    background-image: url(../../images/weight.png);
     background-repeat: no-repeat;
     background-size: contain;
     margin-bottom: 16px;
@@ -118,7 +118,7 @@
     display: inline-block;
     width: 50px;
     height: 50px;
-    background-image: url(../images/weight.png);
+    background-image: url(../../images/weight.png);
     background-repeat: no-repeat;
     background-size: contain;
     margin-bottom: 16px;
