--- a/sass/components/_details-restaurant.scss
+++ b/sass/components/_details-restaurant.scss
@@ -54,7 +54,7 @@
 
 
 .details-restaurant__logo {
-    font-family: 'Film P3', sans-serif;
+    font-family: 'Roboto', sans-serif;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 40px;
@@ -71,7 +71,7 @@
 }
 
 .details-restaurant__title {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
@@ -86,7 +86,7 @@
 }
 
 .details-restaurant__text {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 600;
     font-size: 12px;
     line-height: 1.25;
