--- a/sass/components/_module.scss
+++ b/sass/components/_module.scss
@@ -15,3 +15,10 @@
 
 @import './header';
 @import './footer';
+@import './aboutus';
+@import './details-restaurant';
+
+@import './help';
+@import './hero-restaurant';
+@import './hero-dblx';
+@import './details-restaurant';
