--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ body {
   color: #847e7e;
 }
 
-.cta-form__button, .hero__button, .form__button-submit {
+.cta-form__button, .form__button-submit {
   padding-top: 10px;
   padding-bottom: 10px;
   font-weight: 700;
@@ -258,116 +258,6 @@ h3 {
 
 .logo-label--white {
   color: #ffffff;
-}
-
-.header {
-  background-color: #ffffff;
-  border-bottom: 1px solid #f3f3f3;
-}
-
-.header__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-@media screen and (max-width: 767px) {
-  .header__nav,
-  .header__contacts {
-    display: none;
-  }
-}
-.contacts {
-  display: block;
-}
-@media screen and (min-width: 1200px) {
-  .contacts {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    gap: 40px;
-  }
-}
-
-.contacts__item {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-.contacts__item:first-child {
-  margin-bottom: 10px;
-}
-@media screen and (min-width: 1200px) {
-  .contacts__item:first-child {
-    margin-bottom: 0px;
-  }
-}
-
-.contacts__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.02em;
-  fill: #847e7e;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.contacts__link:hover, .contacts__link:focus {
-  fill: #c79002;
-  color: #c79002;
-}
-@media screen and (min-width: 1200px) {
-  .contacts__link {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    font-size: 14px;
-    line-height: 1.14;
-  }
-}
-
-.contacts__icon-mail {
-  margin-right: 8px;
-  width: 14px;
-  height: 10px;
-}
-@media screen and (min-width: 1200px) {
-  .contacts__icon-mail {
-    margin-right: 10px;
-    width: 16px;
-    height: 12px;
-  }
-}
-
-.contacts__icon-phone {
-  margin-right: 8px;
-  width: 10px;
-  height: 14px;
-}
-@media screen and (min-width: 1200px) {
-  .contacts__icon-phone {
-    margin-right: 10px;
-    width: 10px;
-    height: 16px;
-  }
 }
 
 .logo__name {
@@ -1317,116 +1207,6 @@ body.modal-open {
   line-height: 1.9;
 }
 
-.header {
-  background-color: #ffffff;
-  border-bottom: 1px solid #f3f3f3;
-}
-
-.header__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-@media screen and (max-width: 767px) {
-  .header__nav,
-  .header__contacts {
-    display: none;
-  }
-}
-.contacts {
-  display: block;
-}
-@media screen and (min-width: 1200px) {
-  .contacts {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    gap: 40px;
-  }
-}
-
-.contacts__item {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-.contacts__item:first-child {
-  margin-bottom: 10px;
-}
-@media screen and (min-width: 1200px) {
-  .contacts__item:first-child {
-    margin-bottom: 0px;
-  }
-}
-
-.contacts__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.02em;
-  fill: #847e7e;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.contacts__link:hover, .contacts__link:focus {
-  fill: #c79002;
-  color: #c79002;
-}
-@media screen and (min-width: 1200px) {
-  .contacts__link {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    font-size: 14px;
-    line-height: 1.14;
-  }
-}
-
-.contacts__icon-mail {
-  margin-right: 8px;
-  width: 14px;
-  height: 10px;
-}
-@media screen and (min-width: 1200px) {
-  .contacts__icon-mail {
-    margin-right: 10px;
-    width: 16px;
-    height: 12px;
-  }
-}
-
-.contacts__icon-phone {
-  margin-right: 8px;
-  width: 10px;
-  height: 14px;
-}
-@media screen and (min-width: 1200px) {
-  .contacts__icon-phone {
-    margin-right: 10px;
-    width: 10px;
-    height: 16px;
-  }
-}
-
 .logo__name {
   font-family: "Times New Roman", sans-serif;
   font-style: normal;
@@ -1622,77 +1402,285 @@ body.modal-open {
 }
 
 .hero {
-  height: 400px;
-  padding-top: 118px;
-  padding-bottom: 118px;
-  text-align: center;
-  background-color: #2b2b28;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(..//../images/hero-mobile@1x.jpg);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(..//../images/hero-mobile@1x.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.65)), to(rgba(0, 0, 0, 0.65))), url(../images/home/mobile/03.jpg);
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(../images/home/mobile/03.jpg);
+  background-color: rgba(0, 0, 0, 0.65);
   background-repeat: no-repeat;
-  background-position: center;
   background-size: cover;
+  background-position: center;
+  margin-right: auto;
+  margin-left: auto;
+  padding-bottom: 40px;
+  height: 570px;
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(..//../images/hero-mobile@2x.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(..//../images/hero-mobile@2x.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.65)), to(rgba(0, 0, 0, 0.65))), url(../images/home/mobile/03.jpg);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(../images/home/mobile/03.jpg);
   }
 }
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(..//../images/hero-tablet@1x.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(..//../images/hero-tablet@1x.jpg);
+    height: 720px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.65)), to(rgba(0, 0, 0, 0.65))), url(../images/home/tablet/03.jpg);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(../images/home/tablet/03.jpg);
   }
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(..//../images/hero-tablet@2x.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(..//../images/hero-tablet@2x.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.65)), to(rgba(0, 0, 0, 0.65))), url(../images/home/tablet/03.jpg);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(../images/home/tablet/03.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
   .hero {
-    height: 600px;
-    padding-top: 200px;
-    padding-bottom: 200px;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(..//../images/hero-desktop@1x.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(..//../images/hero-desktop@1x.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.65)), to(rgba(0, 0, 0, 0.65))), url(../images/home/desktop/03.jpg);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(../images/home/desktop/03.jpg);
+    max-width: 1920px;
   }
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(..//../images/hero-desktop@2x.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(..//../images/hero-desktop@2x.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.65)), to(rgba(0, 0, 0, 0.65))), url(../images/home/desktop/03.jpg);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(../images/home/desktop/03.jpg);
   }
+}
+
+.hero__subcontainer {
+  position: relative;
+}
+
+.rest__address {
+  position: absolute;
+  top: 60px;
+  left: 175px;
+  width: 210px;
+  height: 47px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  padding: 2px 5px 2px 5px;
+  margin-left: auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.25;
+  letter-spacing: 0.01em;
+  color: #e5e5e5;
+  border: 1px solid rgba(243, 198, 83, 0.7);
+  border-radius: 2px;
+}
+@media screen and (max-width: 413px) {
+  .rest__address {
+    left: 90px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .rest__address {
+    width: 285px;
+    height: 56px;
+    top: 570px;
+    left: 0;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 1200px) {
+  .rest__address {
+    top: 553px;
+    left: 0;
+  }
+}
+
+.icon-location {
+  margin-right: 8px;
+  width: 24px;
+  height: 24px;
 }
 
 .hero__title {
-  margin-bottom: 30px;
-  font-weight: 900;
-  font-size: 26px;
-  line-height: 1.6;
-  letter-spacing: 0.06em;
+  font-family: "Times New Roman", sans-serif;
+  font-weight: 700;
+  font-size: 31px;
+  line-height: 1.07;
+  letter-spacing: 0.3em;
   text-transform: uppercase;
+  text-align: center;
   color: #ffffff;
+  padding-top: 100px;
+  padding-bottom: 20px;
+  max-width: 300;
+  margin: 0 auto;
+}
+@media screen and (min-width: 768px) {
+  .hero__title {
+    padding-top: 108px;
+    margin-bottom: 16px;
+    max-width: 600;
+    font-size: 40px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .hero__title {
-    font-size: 44px;
-    line-height: 1.36;
+    font-size: 45px;
+    padding-top: 124px;
+    margin-bottom: 32px;
+    max-width: 1200;
   }
 }
 
-.hero__button {
-  padding-left: 20px;
-  padding-right: 20px;
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.hero__title2 {
+  font-family: "Times New Roman", sans-serif;
+  font-weight: 700;
+  font-size: 31px;
+  line-height: 1.07;
+  letter-spacing: 0.3em;
+  text-transform: uppercase;
+  text-align: center;
+  color: #ffffff;
+  padding-top: 10px;
+  max-width: 300;
+  margin: 0 auto;
 }
-.hero__button:hover, .hero__button:focus {
-  background-color: #c79002;
-  -webkit-box-shadow: 0px 0px 20px 30px rgba(114, 64, 96, 0.2);
-          box-shadow: 0px 0px 20px 30px rgba(114, 64, 96, 0.2);
+@media screen and (min-width: 768px) {
+  .hero__title2 {
+    padding-top: 18px;
+    margin-bottom: 16px;
+    max-width: 600;
+    font-size: 40px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__title2 {
+    font-size: 67px;
+    padding-top: 20px;
+    margin-bottom: 32px;
+    max-width: 1200;
+  }
+}
+
+.hero__pretitle {
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 1.25;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-top: 24px;
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 768px) {
+  .hero__pretitle {
+    margin-top: 44px;
+    margin-bottom: 56px;
+    font-size: 26px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__pretitle {
+    margin-bottom: 56px;
+    font-size: 30px;
+    text-align: left;
+  }
+}
+
+.hero__text {
+  text-align: center;
+  font-family: "Times New Roman";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 1.16;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 113px;
+}
+@media screen and (min-width: 768px) {
+  .hero__text {
+    margin-bottom: 145px;
+  }
+}
+
+.hero__button:not(:last-child) {
+  margin-bottom: 24px;
+}
+@media screen and (min-width: 768px) {
+  .hero__button:not(:last-child) {
+    margin-bottom: 0;
+  }
+}
+
+.hero__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-bottom: 61px;
+  margin-right: 0;
+  margin-top: 40px;
+}
+
+.hero__socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  bottom: -80px;
+  left: 0;
+  z-index: 20;
+}
+@media screen and (max-width: 413px) {
+  .hero__socials {
+    bottom: -85px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero__socials {
+    bottom: -85px;
+    left: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__socials {
+    display: none;
+  }
+}
+
+.hero__socials__desktop {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 61px;
+  margin-left: 61px;
+}
+@media screen and (max-width: 1279px) {
+  .hero__socials__desktop {
+    display: none;
+  }
+}
+
+.hero__socials__link:not(:last-child) {
+  margin-right: 20px;
+}
+
+.hero__soc__icon {
+  fill: #f3c653;
+  width: 22px;
+  height: 22px;
+}
+
+.icon-location {
+  fill: #f3c653;
+  width: 24px;
+  height: 24px;
 }
 
 .hero__restaurant {
